Revert "Move services to ServiceRegistry part III"