@@ -34,6 +34,7 @@ import com.yahoo.vespa.hosted.controller.api.integration.deployment.JobType;
 import com.yahoo.vespa.hosted.controller.api.integration.metrics.MetricsService.ApplicationMetrics;
 import com.yahoo.vespa.hosted.controller.api.integration.organization.Contact;
 import com.yahoo.vespa.hosted.controller.api.integration.organization.IssueId;
+import com.yahoo.vespa.hosted.controller.api.integration.organization.MockContactRetriever;
 import com.yahoo.vespa.hosted.controller.api.integration.organization.User;
 import com.yahoo.vespa.hosted.controller.api.integration.resource.MeteringInfo;
 import com.yahoo.vespa.hosted.controller.api.integration.resource.ResourceAllocation;
@@ -927,7 +928,7 @@ public class ApplicationApiTest extends ControllerContainerTest {
 
     @Test
     public void testMeteringResponses() {
-        MockMeteringClient mockMeteringClient = (MockMeteringClient) controllerTester.containerTester().serviceRegistry().meteringService();
+        MockMeteringClient mockMeteringClient = (MockMeteringClient) controllerTester.controller().meteringClient();
 
         // Mock response for MeteringClient
         ResourceAllocation currentSnapshot = new ResourceAllocation(1, 2, 3);
@@ -1726,6 +1727,10 @@ public class ApplicationApiTest extends ControllerContainerTest {
         return (ServiceRegistryMock) tester.container().components().getComponent(ServiceRegistryMock.class.getName());
     }
 
+    private MockContactRetriever contactRetriever() {
+        return (MockContactRetriever) tester.container().components().getComponent(MockContactRetriever.class.getName());
+    }
+
     private void setZoneInRotation(String rotationName, ZoneId zone) {
         serviceRegistry().globalRoutingServiceMock().setStatus(rotationName, zone, com.yahoo.vespa.hosted.controller.api.integration.routing.RotationStatus.IN);
         new RotationStatusUpdater(tester.controller(), Duration.ofDays(1), new JobControl(tester.controller().curator())).run();
@@ -1754,12 +1759,11 @@ public class ApplicationApiTest extends ControllerContainerTest {
 
     private void registerContact(long propertyId) {
         PropertyId p = new PropertyId(String.valueOf(propertyId));
-        serviceRegistry().contactRetrieverMock().addContact(p, new Contact(URI.create("www.issues.tld/" + p.id()),
-                                                                           URI.create("www.contacts.tld/" + p.id()),
-                                                                           URI.create("www.properties.tld/" + p.id()),
-                                                                           List.of(Collections.singletonList("alice"),
-                                                                                   Collections.singletonList("bob")),
-                                                                           "queue", Optional.empty()));
+        contactRetriever().addContact(p, new Contact(URI.create("www.issues.tld/" + p.id()),
+                                                     URI.create("www.contacts.tld/" + p.id()),
+                                                     URI.create("www.properties.tld/" + p.id()),
+                                                     List.of(Collections.singletonList("alice"),
+                Collections.singletonList("bob")), "queue", Optional.empty()));
     }
 
     private static class RequestBuilder implements Supplier<Request> {
